# speak-app

./: .gitignore  AUDIO_TEST_GUIDE.md  BATCH_PROCESSING.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMMAND_REFERENCE.md  CONTRIBUTING.md  FEATURES_OVERVIEW.md  INSTALLATION.md  INSTALLATION_CHECKLIST.md  LICENSE  PROJECT_STATUS.md  README.md  SETUP_OPENAI.md  TEST_RESULTS.md  TEST_SUMMARY.md  TTS_COST_OPTIMIZATION.md  TTS_INTEGRATION_DOCUMENTATION.md  common_notifications.txt  pytest.ini  run_all_tests.sh  run_audio_tests.sh  set_openai_default.py  speak  speak-ai-summary  speak-batch  speak-costs  speak-dev  speak-with-tracking  test-batch-demo.py  test_messages.txt  test_voices_quick.py
.claude/backup-20251009_093852/hooks/: enable_debug.sh  pre_compact.py  pre_tool_use_safety.py  pre_tool_use_with_correlation.py  pyproject.toml  session_context_loader.py  user_prompt_submit.py
.claude/backup-20251009_093852/hooks/utils/: agent_naming_service.py  relationship_tracker.py
.claude/backup-20251009_093852/hooks/utils/tts/: adaptive_cleanup.py  elevenlabs_tts.py  enhanced_playback_coordinator.py  lazy_loader.py  message_aggregator.py  openai_streaming_client.py  openai_tts.py  openai_tts_optimized.py  personalization_engine.py  phase3_42_cache_validation_framework.py  phase3_42_final_validation.py  phase3_42_integration_example.py  phase3_42_message_processing_cache.py  phase3_43_audio_multiplexer.py  phase3_43_circuit_breaker.py  phase3_43_concurrent_api_pool.py  phase3_43_graceful_degradation.py  phase3_43_request_batcher.py  phase3_43_retry_logic.py  pyttsx3_tts.py  (+13 more)
(+103 files in other folders)
